# minio-python

./: README.md  pyproject.toml
src/minio_uploader/: .env  cli.py  client.py  config.py
